2010-11-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPredicate.m: Fixup use of preprocessor constants.

2010-11-17  Eric Wasylishen

	* Source/NSPredicate.m: Implement MATCHES and LIKE using ICU
	* configure.ac: Check for unicode/uregex.h in ICU checks 

2010-11-13  Riccardo Mottola

	* Source/NSPathUtilities.m:
	Make NSDownloadDirectory and NSDocumentDIrectory relative to the
	user home and for the user domain only. Behaviour checked on the Mac.

2010-11-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSIndex.m: ([-setUnitRef:type:]) Fix incorrect special
	handling of category methods.

2010-11-02  Larry Campbell <lcampbel@akamai.com>

	* Tools/make_strings/make_strings.m: Fix line missed in last patch.
	* Source/NSPropertyList.m: Fixes for date serialization byte swaps.

2010-10-31  Larry Campbell <lcampbel@akamai.com>

	* Tools/make_strings/make_strings.m: Permits tool to take nil as the
	table name argument in NSLocalizedStringFromTable and
	NSLocalizedStringFromTableInBundle (as does the corresponding OSX
	utility, genstrings).

2010-10-30  German Arias <german@xelalug.org>

	* Documentation/GNUmakefile: Changes in some files names to 
	correspond with the files provided in the Documentation directory.

2010-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepBase/GSMime.h
	* Source/Additions/GSMime.m: Add support for delivery receipts.
	* Source/NSURLConnection.m: Fix simple leak in
	([+sendSynchronousRequest:returningResponse:error:])

2010-10-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFIInvocation.m: Revert David's last change ,which caused
	crashes by dereferencing a null pointer, even though I had put a
	comment in the code warning that the pointer could be null!

2010-10-27  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Fix definition of HAVE_ICU
	* configure:
	* Headers/Additions/GNUstepBase/config.h.in: regenerate
	* Headers/Additions/GNUstepBase/GSMime.h